--- a/CRIOLLOPABLO_EXAMANE_PGR1/appsettings.json
+++ b/CRIOLLOPABLO_EXAMANE_PGR1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CRIOLLOPABLO_EXAMANE_PGR1Context": "Server=UPOAULA10306;Database=CRIOLLOPABLO_EXAMANE_PGR1Context-fcd49011-a21e-4d56-b89b-d7367dad9718;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
